# moderngl-cpp

./: .gitignore  CMakeLists.txt  License  Project.cmake  Readme.md  config.hpp.in  version.hpp.in
cmake/: Build.cmake  (+2 more)
examples/basic_alpha_blending/: CMakeLists.txt  main.cpp
examples/basic_application_example/: CMakeLists.txt
examples/basic_application_example/inc/: shader.hpp
examples/basic_application_example/shaders/vertex/: example.vs
examples/basic_application_example/src/: render_layer.cpp  shader.cpp
examples/basic_perspective_projection/: CMakeLists.txt  main.cpp
examples/basic_uniforms_and_attributes/: CMakeLists.txt  main.cpp
examples/compute_shader/: CMakeLists.txt  main.cpp
examples/opengl/basic_index_buffer/: CMakeLists.txt  main.cpp
mgl/application/: CMakeLists.txt
mgl/application/inc/mgl_application/: application.hpp
mgl/application/src/: application.cpp
mgl/core/: CMakeLists.txt
mgl/core/inc/: mgl_core.hpp
mgl/core/inc/mgl_core/: builtins.hpp  config.hpp  containers.hpp  debug.hpp  io.hpp  log.hpp  math.hpp  memory.hpp  pch.hpp  platform.hpp  profiling.hpp  re.hpp  shared_ptr.hpp  span.hpp  string.hpp  timer.hpp  unique_ptr.hpp  utils.hpp  weak_ptr.hpp  zip.hpp
mgl/core/src/: builtins.cpp  io.cpp  log.cpp  math.cpp  pch.cpp  profiling.cpp  re.cpp  string.cpp  timer.cpp  utils.cpp  zip.cpp
mgl/core/tests/: test_io.cpp  test_log.cpp  test_string.cpp  test_zip.cpp
mgl/engine/: CMakeLists.txt
mgl/engine/inc/mgl_engine/: application.hpp  buffers.hpp  layer.hpp  material.hpp  render.hpp  renderer.hpp  shader.hpp
mgl/engine/shaders/: color_material.glsl
mgl/engine/shaders/fragment/: color.fs  phong.fs
mgl/engine/src/: application.cpp  buffers.cpp  layer.cpp  render.cpp  renderer.cpp  shader.cpp
mgl/engine/src/commands/: common.cpp  draw.cpp  material.cpp  state.cpp  texture.cpp
mgl/engine/src/layers/: render.cpp
mgl/engine/src/materials/: color.cpp
mgl/game/: CMakeLists.txt
mgl/game/inc/mgl_game/: event.hpp  input.hpp  layer.hpp  sdl_window.hpp  window.hpp
mgl/game/src/: input.cpp  layer.cpp  sdl_window.cpp  window.cpp
mgl/game/src/context/: sdl_window.cpp
mgl/game/src/integrations/: imgui.cpp
mgl/game/src/layers/: layer.cpp
mgl/game/src/opengl/: vertex_array.cpp  vertex_buffer.cpp
mgl/game/src/resources/: registry.cpp
mgl/graphics/: CMakeLists.txt
mgl/graphics/inc/mgl_graphics/: application.hpp  batch.hpp  batch_render.hpp  buffer.hpp  buffers.hpp  command.hpp  enums.hpp  graphics.hpp  layer.hpp  manager.hpp  material.hpp  render.hpp  render_script.hpp  shader.hpp  texture.hpp  textures.hpp
mgl/graphics/shaders/fragment/: color.fs  imgui.fs  phong.fs  text.fs
mgl/graphics/shaders/vertex/: imgui.vs  simple.vs  text.vs
mgl/graphics/src/: application.cpp  batch.cpp  batch_render.cpp  buffer.cpp  buffers.cpp  command.cpp  enums.cpp  graphics.cpp  layer.cpp  render.cpp  render_script.cpp  shader.cpp  texture.cpp
mgl/graphics/src/atlas/: font.cpp
mgl/graphics/src/commands/: common.cpp  draw.cpp  functions.cpp  material.cpp  shader.cpp  state.cpp  texture.cpp
mgl/graphics/src/layers/: gui.cpp  render.cpp
mgl/graphics/src/managers/: buffer.cpp  font.cpp  shader.cpp  texture.cpp
mgl/graphics/src/materials/: color.cpp
mgl/graphics/src/shaders/: gui.cpp  text.cpp
mgl/graphics/src/textures/: texture2d.cpp
mgl/opengl/: CMakeLists.txt
mgl/opengl/inc/: mgl_opengl.hpp
mgl/opengl/inc/mgl_opengl/: attachment.hpp  attribute.hpp  buffer.hpp  buffer_layout.hpp  builtins.hpp  color_mask.hpp  compute_shader.hpp  conditional_render.hpp  context.hpp  data_type.hpp  enums.hpp  format.hpp  framebuffer.hpp  glmethods.hpp  glsl_source.hpp  program.hpp  query.hpp  renderbuffer.hpp  sampler.hpp  scope.hpp  shader.hpp  subroutine.hpp  texture.hpp  texture3d.hpp  texture_2d.hpp  texture_3d.hpp  texture_array.hpp  texture_cube.hpp  uniform.hpp  uniform_block.hpp  uniformblock.hpp  varying.hpp  vertex_array.hpp  vertex_buffer.hpp
mgl/opengl/src/: attribute.cpp  buffer.cpp  buffer_layout.cpp  builtins.cpp  compute_shader.cpp  computeshader.cpp  conditional_render.cpp  conditionalrender.cpp  context.cpp  data_type.cpp  datat_ype.cpp  datatype.cpp  format.cpp  framebuffer.cpp  glsl_source.cpp  glslsource.cpp  program.cpp  query.cpp  renderbuffer.cpp  sampler.cpp  scope.cpp  shader.cpp  subroutine.cpp  texture2d.cpp  texture3d.cpp  texture_2d.cpp  texture_3d.cpp  texture_array.cpp  texture_cube.cpp  texturearray.cpp  texturecube.cpp  uniform.cpp  uniform_block.cpp  uniformblock.cpp  varying.cpp  vertex_array.cpp  vertexarray.cpp
mgl/opengl/src/contexts/: cgl.cpp  egl.cpp  glx.cpp  wgl.cpp
mgl/opengl/tests/: test_buffer.cpp  test_buffer_layout.cpp  test_compute_shader.cpp  test_context.cpp  test_framebuffer.cpp  test_generic.cpp.template
mgl/platform/: CMakeLists.txt
mgl/platform/inc/internal/: mgl_platform_internal.hpp
mgl/platform/inc/mgl_platform/: event.hpp  input.hpp  window.hpp
mgl/platform/src/: input.cpp  internal.cpp  window.cpp
mgl/registry/: CMakeLists.txt
mgl/registry/src/: location.cpp  registry.cpp
mgl/registry/tests/: test_location.cpp  test_registry.cpp
mgl/window/: CMakeLists.txt
mgl/window/inc/: mgl_window.hpp
mgl/window/src/: api.cpp  builtins.cpp  input.cpp  layer.cpp  renderer.cpp  sdl_window.cpp  window.cpp
vendors/: CMakeLists.txt
vendors/entt/: CMakeLists.txt
vendors/glad/: CMakeLists.txt
vendors/glad/src/: egl.c  vulkan.c
vendors/glfw/: CMakeLists.txt
vendors/glm/: CMakeLists.txt
vendors/glm/glm/: CMakeLists.txt
vendors/gtest/: CMakeLists.txt
vendors/headers_only/: CMakeLists.txt
vendors/headers_only/stb/: stb_image.hpp  stb_image_write.h  stb_truetype.h  stb_vorbis.h
vendors/imgui/: CMakeLists.txt
vendors/imgui/src/: imgui.cpp  imgui_tables.cpp
vendors/json/: CMakeLists.txt
vendors/libzip/: CMakeLists.txt
vendors/mojoAL/: CMakeLists.txt
vendors/physfs/: CMakeLists.txt
vendors/sdl2/: CMakeLists.txt
vendors/simplelog/: CMakeLists.txt
vendors/simplelog/src/: log.c
vendors/spdlog/: CMakeLists.txt
vendors/spdlog/cmake/: utils.cmake
(+254 files in other folders)
